fixes total display on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -218,6 +218,7 @@ ul.answers {
 	margin:100px auto 150px;
 	border: 1px solid #aaa;
 	padding: 10px 30px;
+	width: 90%;
 }
 
 	.total h2
